<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#D8D4D4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
        
    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="190dp"
		android:layout_margin="10dp"
        android:background="@null"
        android:contentDescription="@string/label"
        android:src="@drawable/label_background" />

    <AutoCompleteTextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/address"
        android:layout_below="@+id/name"
        android:ems="10"
        android:text="@string/name" />
    
    <AutoCompleteTextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/checkbox"
        android:ems="10"
        android:text="@string/address" />
    
    <ImageView
        android:id="@+id/logo"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignTop="@+id/outline"
        android:layout_alignLeft="@+id/outline"
        android:background="@null"
        android:contentDescription="@string/label"
        android:src="@drawable/label_logo" />
    
    <ImageView
        android:id="@+id/checkbox"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:background="@null"
        android:contentDescription="@string/label"
        android:src="@drawable/label_checkbox" />

    <ImageView
        android:id="@+id/outline"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/label"
        android:src="@drawable/label_logo_outline" />
    
</RelativeLayout>